examples/custom-cat-image/cdk.out/custom-cat-image.template.json
{
 "Resources": {
  "CheshireCatVpcB671BC86": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "custom-cat-image/CheshireCat/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/Resource"
   }
  },
  "CheshireCatVpcPublicSubnet1SubnetD9F10DE1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "CheshireCatVpcB671BC86"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "custom-cat-image/CheshireCat/Vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PublicSubnet1/Subnet"
   }
  },
  "CheshireCatVpcPublicSubnet1RouteTable8B0AE92C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "CheshireCatVpcB671BC86"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "custom-cat-image/CheshireCat/Vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PublicSubnet1/RouteTable"
   }
  },
  "CheshireCatVpcPublicSubnet1RouteTableAssociation38FC286B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CheshireCatVpcPublicSubnet1RouteTable8B0AE92C"
    },
    "SubnetId": {
     "Ref": "CheshireCatVpcPublicSubnet1SubnetD9F10DE1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "CheshireCatVpcPublicSubnet1DefaultRoute14A87614": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "CheshireCatVpcPublicSubnet1RouteTable8B0AE92C"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "CheshireCatVpcIGW2AC71E3C"
    }
   },
   "DependsOn": [
    "CheshireCatVpcVPCGW13D26AFF"
   ],
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "CheshireCatVpcPublicSubnet1EIP86C874BF": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "custom-cat-image/CheshireCat/Vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PublicSubnet1/EIP"
   }
  },
  "CheshireCatVpcPublicSubnet1NATGatewayD09F1325": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "CheshireCatVpcPublicSubnet1SubnetD9F10DE1"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "CheshireCatVpcPublicSubnet1EIP86C874BF",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "custom-cat-image/CheshireCat/Vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "CheshireCatVpcPublicSubnet1DefaultRoute14A87614",
    "CheshireCatVpcPublicSubnet1RouteTableAssociation38FC286B"
   ],
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PublicSubnet1/NATGateway"
   }
  },
  "CheshireCatVpcPublicSubnet2SubnetD0848682": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "CheshireCatVpcB671BC86"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "custom-cat-image/CheshireCat/Vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PublicSubnet2/Subnet"
   }
  },
  "CheshireCatVpcPublicSubnet2RouteTable6C35ED29": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "CheshireCatVpcB671BC86"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "custom-cat-image/CheshireCat/Vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PublicSubnet2/RouteTable"
   }
  },
  "CheshireCatVpcPublicSubnet2RouteTableAssociationCCE60EB0": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CheshireCatVpcPublicSubnet2RouteTable6C35ED29"
    },
    "SubnetId": {
     "Ref": "CheshireCatVpcPublicSubnet2SubnetD0848682"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "CheshireCatVpcPublicSubnet2DefaultRoute267DCAA1": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "CheshireCatVpcPublicSubnet2RouteTable6C35ED29"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "CheshireCatVpcIGW2AC71E3C"
    }
   },
   "DependsOn": [
    "CheshireCatVpcVPCGW13D26AFF"
   ],
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "CheshireCatVpcPublicSubnet2EIP79178407": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "custom-cat-image/CheshireCat/Vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PublicSubnet2/EIP"
   }
  },
  "CheshireCatVpcPublicSubnet2NATGateway60C976BA": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "CheshireCatVpcPublicSubnet2SubnetD0848682"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "CheshireCatVpcPublicSubnet2EIP79178407",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "custom-cat-image/CheshireCat/Vpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "CheshireCatVpcPublicSubnet2DefaultRoute267DCAA1",
    "CheshireCatVpcPublicSubnet2RouteTableAssociationCCE60EB0"
   ],
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PublicSubnet2/NATGateway"
   }
  },
  "CheshireCatVpcPrivateSubnet1SubnetB06680A7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "CheshireCatVpcB671BC86"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "custom-cat-image/CheshireCat/Vpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PrivateSubnet1/Subnet"
   }
  },
  "CheshireCatVpcPrivateSubnet1RouteTableFD714B3D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "CheshireCatVpcB671BC86"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "custom-cat-image/CheshireCat/Vpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PrivateSubnet1/RouteTable"
   }
  },
  "CheshireCatVpcPrivateSubnet1RouteTableAssociationF11D1283": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CheshireCatVpcPrivateSubnet1RouteTableFD714B3D"
    },
    "SubnetId": {
     "Ref": "CheshireCatVpcPrivateSubnet1SubnetB06680A7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "CheshireCatVpcPrivateSubnet1DefaultRoute5A766532": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "CheshireCatVpcPrivateSubnet1RouteTableFD714B3D"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "CheshireCatVpcPublicSubnet1NATGatewayD09F1325"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "CheshireCatVpcPrivateSubnet2Subnet708984CF": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "CheshireCatVpcB671BC86"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "custom-cat-image/CheshireCat/Vpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PrivateSubnet2/Subnet"
   }
  },
  "CheshireCatVpcPrivateSubnet2RouteTableFAB323FB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "CheshireCatVpcB671BC86"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "custom-cat-image/CheshireCat/Vpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PrivateSubnet2/RouteTable"
   }
  },
  "CheshireCatVpcPrivateSubnet2RouteTableAssociationFBA68A30": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CheshireCatVpcPrivateSubnet2RouteTableFAB323FB"
    },
    "SubnetId": {
     "Ref": "CheshireCatVpcPrivateSubnet2Subnet708984CF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "CheshireCatVpcPrivateSubnet2DefaultRouteDB15D76C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "CheshireCatVpcPrivateSubnet2RouteTableFAB323FB"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "CheshireCatVpcPublicSubnet2NATGateway60C976BA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "CheshireCatVpcIGW2AC71E3C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "custom-cat-image/CheshireCat/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/IGW"
   }
  },
  "CheshireCatVpcVPCGW13D26AFF": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "CheshireCatVpcB671BC86"
    },
    "InternetGatewayId": {
     "Ref": "CheshireCatVpcIGW2AC71E3C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/Vpc/VPCGW"
   }
  },
  "CheshireCatMainEfs1F8A2E55": {
   "Type": "AWS::EFS::FileSystem",
   "Properties": {
    "Encrypted": true,
    "FileSystemTags": [
     {
      "Key": "Name",
      "Value": "custom-cat-image/CheshireCat/MainEfs"
     }
    ],
    "PerformanceMode": "generalPurpose"
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/MainEfs/Resource"
   }
  },
  "CheshireCatMainEfsEfsSecurityGroup8D7C078C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "custom-cat-image/CheshireCat/MainEfs/EfsSecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "custom-cat-image/CheshireCat/MainEfs"
     }
    ],
    "VpcId": {
     "Ref": "CheshireCatVpcB671BC86"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/MainEfs/EfsSecurityGroup/Resource"
   }
  },
  "CheshireCatMainEfsEfsSecurityGroupfromcustomcatimageCheshireCatQdrantEcsClusterQdrantFargateServiceSecurityGroup7634E41E20498F62858A": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "from customcatimageCheshireCatQdrantEcsClusterQdrantFargateServiceSecurityGroup7634E41E:2049",
    "FromPort": 2049,
    "GroupId": {
     "Fn::GetAtt": [
      "CheshireCatMainEfsEfsSecurityGroup8D7C078C",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "CheshireCatQdrantEcsClusterQdrantFargateServiceSecurityGroup0573A1C3",
      "GroupId"
     ]
    },
    "ToPort": 2049
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/MainEfs/EfsSecurityGroup/from customcatimageCheshireCatQdrantEcsClusterQdrantFargateServiceSecurityGroup7634E41E:2049"
   }
  },
  "CheshireCatMainEfsEfsSecurityGroupfromcustomcatimageCheshireCatCatEcsClusterCatFargateServiceSecurityGroup3582EC1C2049616DC558": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "from customcatimageCheshireCatCatEcsClusterCatFargateServiceSecurityGroup3582EC1C:2049",
    "FromPort": 2049,
    "GroupId": {
     "Fn::GetAtt": [
      "CheshireCatMainEfsEfsSecurityGroup8D7C078C",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "CheshireCatCatEcsClusterCatFargateServiceSecurityGroup29A2B458",
      "GroupId"
     ]
    },
    "ToPort": 2049
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/MainEfs/EfsSecurityGroup/from customcatimageCheshireCatCatEcsClusterCatFargateServiceSecurityGroup3582EC1C:2049"
   }
  },
  "CheshireCatMainEfsEfsMountTarget1FAB6A220": {
   "Type": "AWS::EFS::MountTarget",
   "Properties": {
    "FileSystemId": {
     "Ref": "CheshireCatMainEfs1F8A2E55"
    },
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "CheshireCatMainEfsEfsSecurityGroup8D7C078C",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "CheshireCatVpcPrivateSubnet1SubnetB06680A7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/MainEfs/EfsMountTarget1"
   }
  },
  "CheshireCatMainEfsEfsMountTarget2B01F50C0": {
   "Type": "AWS::EFS::MountTarget",
   "Properties": {
    "FileSystemId": {
     "Ref": "CheshireCatMainEfs1F8A2E55"
    },
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "CheshireCatMainEfsEfsSecurityGroup8D7C078C",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "CheshireCatVpcPrivateSubnet2Subnet708984CF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/MainEfs/EfsMountTarget2"
   }
  },
  "CheshireCatQdrantEcsClusterQdrantCluster9C56AEA2": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantCluster/Resource"
   }
  },
  "CheshireCatQdrantEcsClusterQdrantFargateServiceLB8BDD7984": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "CheshireCatQdrantEcsClusterQdrantFargateServiceLBSecurityGroup4F1053D6",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "CheshireCatVpcPublicSubnet1SubnetD9F10DE1"
     },
     {
      "Ref": "CheshireCatVpcPublicSubnet2SubnetD0848682"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "CheshireCatVpcPublicSubnet1DefaultRoute14A87614",
    "CheshireCatVpcPublicSubnet1RouteTableAssociation38FC286B",
    "CheshireCatVpcPublicSubnet2DefaultRoute267DCAA1",
    "CheshireCatVpcPublicSubnet2RouteTableAssociationCCE60EB0"
   ],
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantFargateService/LB/Resource"
   }
  },
  "CheshireCatQdrantEcsClusterQdrantFargateServiceLBSecurityGroup4F1053D6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB customcatimageCheshireCatQdrantEcsClusterQdrantFargateServiceLB20FAB242",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "CheshireCatVpcB671BC86"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantFargateService/LB/SecurityGroup/Resource"
   }
  },
  "CheshireCatQdrantEcsClusterQdrantFargateServiceLBSecurityGrouptocustomcatimageCheshireCatQdrantEcsClusterQdrantFargateServiceSecurityGroup7634E41E803ED8DB21": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "CheshireCatQdrantEcsClusterQdrantFargateServiceLBSecurityGroup4F1053D6",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "CheshireCatQdrantEcsClusterQdrantFargateServiceSecurityGroup0573A1C3",
      "GroupId"
     ]
    },
    "FromPort": 80,
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantFargateService/LB/SecurityGroup/to customcatimageCheshireCatQdrantEcsClusterQdrantFargateServiceSecurityGroup7634E41E:80"
   }
  },
  "CheshireCatQdrantEcsClusterQdrantFargateServiceLBPublicListenerD8B50884": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "CheshireCatQdrantEcsClusterQdrantFargateServiceLBPublicListenerECSGroup2F181D78"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "CheshireCatQdrantEcsClusterQdrantFargateServiceLB8BDD7984"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantFargateService/LB/PublicListener/Resource"
   }
  },
  "CheshireCatQdrantEcsClusterQdrantFargateServiceLBPublicListenerECSGroup2F181D78": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 120,
    "HealthCheckPath": "/",
    "HealthCheckTimeoutSeconds": 60,
    "HealthyThresholdCount": 2,
    "Matcher": {
     "HttpCode": "200,204"
    },
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "UnhealthyThresholdCount": 2,
    "VpcId": {
     "Ref": "CheshireCatVpcB671BC86"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantFargateService/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "CheshireCatQdrantEcsClusterQdrantFargateServiceTaskDefTaskRole792F795B": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantFargateService/TaskDef/TaskRole/Resource"
   }
  },
  "CheshireCatQdrantEcsClusterQdrantFargateServiceTaskDefTaskRoleDefaultPolicy6DD9957A": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "elasticfilesystem:ClientMount",
        "elasticfilesystem:ClientRootAccess",
        "elasticfilesystem:ClientWrite",
        "elasticfilesystem:DescribeMountTargets"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:aws:elasticfilesystem:",
          {
           "Ref": "AWS::Region"
          },
          ":",
          {
           "Ref": "AWS::AccountId"
          },
          ":file-system/",
          {
           "Ref": "CheshireCatMainEfs1F8A2E55"
          }
         ]
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "CheshireCatQdrantEcsClusterQdrantFargateServiceTaskDefTaskRoleDefaultPolicy6DD9957A",
    "Roles": [
     {
      "Ref": "CheshireCatQdrantEcsClusterQdrantFargateServiceTaskDefTaskRole792F795B"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantFargateService/TaskDef/TaskRole/DefaultPolicy/Resource"
   }
  },
  "CheshireCatQdrantEcsClusterQdrantFargateServiceTaskDef4E43A6F2": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "QDRANT__STORAGE__STORAGE_PATH",
        "Value": "/mnt/efs/fs1/qdrantdata"
       },
       {
        "Name": "QDRANT__SERVICE__HTTP_PORT",
        "Value": "80"
       }
      ],
      "Essential": true,
      "Image": "qdrant/qdrant:latest",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "CheshireCatQdrantEcsClusterQdrantFargateServiceTaskDefwebLogGroup5AC45E0C"
        },
        "awslogs-stream-prefix": "QdrantFargateService",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "MountPoints": [
       {
        "ContainerPath": "/mnt/efs/fs1",
        "ReadOnly": false,
        "SourceVolume": "mainEfs"
       }
      ],
      "Name": "web",
      "PortMappings": [
       {
        "ContainerPort": 80,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "CheshireCatQdrantEcsClusterQdrantFargateServiceTaskDefExecutionRole011FDBD3",
      "Arn"
     ]
    },
    "Family": "customcatimageCheshireCatQdrantEcsClusterQdrantFargateServiceTaskDefDA68F66A",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "CheshireCatQdrantEcsClusterQdrantFargateServiceTaskDefTaskRole792F795B",
      "Arn"
     ]
    },
    "Volumes": [
     {
      "EFSVolumeConfiguration": {
       "FilesystemId": {
        "Ref": "CheshireCatMainEfs1F8A2E55"
       }
      },
      "Name": "mainEfs"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantFargateService/TaskDef/Resource"
   }
  },
  "CheshireCatQdrantEcsClusterQdrantFargateServiceTaskDefwebLogGroup5AC45E0C": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantFargateService/TaskDef/web/LogGroup/Resource"
   }
  },
  "CheshireCatQdrantEcsClusterQdrantFargateServiceTaskDefExecutionRole011FDBD3": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantFargateService/TaskDef/ExecutionRole/Resource"
   }
  },
  "CheshireCatQdrantEcsClusterQdrantFargateServiceTaskDefExecutionRoleDefaultPolicy2D79750D": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "CheshireCatQdrantEcsClusterQdrantFargateServiceTaskDefwebLogGroup5AC45E0C",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "CheshireCatQdrantEcsClusterQdrantFargateServiceTaskDefExecutionRoleDefaultPolicy2D79750D",
    "Roles": [
     {
      "Ref": "CheshireCatQdrantEcsClusterQdrantFargateServiceTaskDefExecutionRole011FDBD3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantFargateService/TaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "CheshireCatQdrantEcsClusterQdrantFargateService18A7E13A": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "CheshireCatQdrantEcsClusterQdrantCluster9C56AEA2"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "web",
      "ContainerPort": 80,
      "TargetGroupArn": {
       "Ref": "CheshireCatQdrantEcsClusterQdrantFargateServiceLBPublicListenerECSGroup2F181D78"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "CheshireCatQdrantEcsClusterQdrantFargateServiceSecurityGroup0573A1C3",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "CheshireCatVpcPrivateSubnet1SubnetB06680A7"
       },
       {
        "Ref": "CheshireCatVpcPrivateSubnet2Subnet708984CF"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "CheshireCatQdrantEcsClusterQdrantFargateServiceTaskDef4E43A6F2"
    }
   },
   "DependsOn": [
    "CheshireCatQdrantEcsClusterQdrantFargateServiceLBPublicListenerECSGroup2F181D78",
    "CheshireCatQdrantEcsClusterQdrantFargateServiceLBPublicListenerD8B50884"
   ],
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantFargateService/Service/Service"
   }
  },
  "CheshireCatQdrantEcsClusterQdrantFargateServiceSecurityGroup0573A1C3": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantFargateService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "CheshireCatVpcB671BC86"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantFargateService/Service/SecurityGroup/Resource"
   }
  },
  "CheshireCatQdrantEcsClusterQdrantFargateServiceSecurityGroupfromcustomcatimageCheshireCatQdrantEcsClusterQdrantFargateServiceLBSecurityGroup2B918DDD80B9614C09": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "CheshireCatQdrantEcsClusterQdrantFargateServiceSecurityGroup0573A1C3",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "CheshireCatQdrantEcsClusterQdrantFargateServiceLBSecurityGroup4F1053D6",
      "GroupId"
     ]
    },
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantFargateService/Service/SecurityGroup/from customcatimageCheshireCatQdrantEcsClusterQdrantFargateServiceLBSecurityGroup2B918DDD:80"
   }
  },
  "CheshireCatQdrantEcsClusterQdrantFargateServiceSecurityGroupfromcustomcatimageCheshireCatMainEfsEfsSecurityGroupE7FD96C7204959AAC8F3": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "from customcatimageCheshireCatMainEfsEfsSecurityGroupE7FD96C7:2049",
    "FromPort": 2049,
    "GroupId": {
     "Fn::GetAtt": [
      "CheshireCatQdrantEcsClusterQdrantFargateServiceSecurityGroup0573A1C3",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "CheshireCatMainEfsEfsSecurityGroup8D7C078C",
      "GroupId"
     ]
    },
    "ToPort": 2049
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/QdrantEcsCluster/QdrantFargateService/Service/SecurityGroup/from customcatimageCheshireCatMainEfsEfsSecurityGroupE7FD96C7:2049"
   }
  },
  "CheshireCatCatEcsClusterCatCluster38B41D90": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/CatEcsCluster/CatCluster/Resource"
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceLBD31F79A7": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "CheshireCatCatEcsClusterCatFargateServiceLBSecurityGroup593BC2CC",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "CheshireCatVpcPublicSubnet1SubnetD9F10DE1"
     },
     {
      "Ref": "CheshireCatVpcPublicSubnet2SubnetD0848682"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "CheshireCatVpcPublicSubnet1DefaultRoute14A87614",
    "CheshireCatVpcPublicSubnet1RouteTableAssociation38FC286B",
    "CheshireCatVpcPublicSubnet2DefaultRoute267DCAA1",
    "CheshireCatVpcPublicSubnet2RouteTableAssociationCCE60EB0"
   ],
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/CatEcsCluster/CatFargateService/LB/Resource"
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceLBSecurityGroup593BC2CC": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB customcatimageCheshireCatCatEcsClusterCatFargateServiceLBEE8A0D63",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "CheshireCatVpcB671BC86"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/CatEcsCluster/CatFargateService/LB/SecurityGroup/Resource"
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceLBSecurityGrouptocustomcatimageCheshireCatCatEcsClusterCatFargateServiceSecurityGroup3582EC1C8081DF558C": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "CheshireCatCatEcsClusterCatFargateServiceLBSecurityGroup593BC2CC",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "CheshireCatCatEcsClusterCatFargateServiceSecurityGroup29A2B458",
      "GroupId"
     ]
    },
    "FromPort": 80,
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/CatEcsCluster/CatFargateService/LB/SecurityGroup/to customcatimageCheshireCatCatEcsClusterCatFargateServiceSecurityGroup3582EC1C:80"
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceLBPublicListenerCD3919DE": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "CheshireCatCatEcsClusterCatFargateServiceLBPublicListenerECSGroup1614C109"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "CheshireCatCatEcsClusterCatFargateServiceLBD31F79A7"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/CatEcsCluster/CatFargateService/LB/PublicListener/Resource"
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceLBPublicListenerECSGroup1614C109": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 120,
    "HealthCheckPath": "/",
    "HealthCheckTimeoutSeconds": 60,
    "HealthyThresholdCount": 2,
    "Matcher": {
     "HttpCode": "200,204,403"
    },
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "UnhealthyThresholdCount": 2,
    "VpcId": {
     "Ref": "CheshireCatVpcB671BC86"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/CatEcsCluster/CatFargateService/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceTaskDefTaskRoleF9924A1C": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/CatEcsCluster/CatFargateService/TaskDef/TaskRole/Resource"
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceTaskDefTaskRoleDefaultPolicy75445D37": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "elasticfilesystem:ClientMount",
        "elasticfilesystem:ClientRootAccess",
        "elasticfilesystem:ClientWrite",
        "elasticfilesystem:DescribeMountTargets"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:aws:elasticfilesystem:",
          {
           "Ref": "AWS::Region"
          },
          ":",
          {
           "Ref": "AWS::AccountId"
          },
          ":file-system/",
          {
           "Ref": "CheshireCatMainEfs1F8A2E55"
          }
         ]
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "CheshireCatCatEcsClusterCatFargateServiceTaskDefTaskRoleDefaultPolicy75445D37",
    "Roles": [
     {
      "Ref": "CheshireCatCatEcsClusterCatFargateServiceTaskDefTaskRoleF9924A1C"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/CatEcsCluster/CatFargateService/TaskDef/TaskRole/DefaultPolicy/Resource"
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceTaskDefF999623A": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "WATCHFILES_FORCE_POLLING",
        "Value": "false"
       },
       {
        "Name": "CORE_USE_SECURE_PROTOCOLS",
        "Value": "true"
       },
       {
        "Name": "CORE_PORT",
        "Value": "80"
       },
       {
        "Name": "METADATA_FILE",
        "Value": "/mnt/efs/fs1/metadata.json"
       },
       {
        "Name": "QDRANT_HOST",
        "Value": {
         "Fn::Join": [
          "",
          [
           "http://",
           {
            "Fn::GetAtt": [
             "CheshireCatQdrantEcsClusterQdrantFargateServiceLB8BDD7984",
             "DNSName"
            ]
           }
          ]
         ]
        }
       },
       {
        "Name": "QDRANT_PORT",
        "Value": "80"
       }
      ],
      "Essential": true,
      "Image": {
       "Fn::Sub": "${AWS::AccountId}.dkr.ecr.${AWS::Region}.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-${AWS::AccountId}-${AWS::Region}:75fa37f2f2895f6a686a1e6e43eda5791a8a5b9336e5787f30f24d1881017bc7"
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "CheshireCatCatEcsClusterCatFargateServiceTaskDefwebLogGroupBC7A147D"
        },
        "awslogs-stream-prefix": "CatFargateService",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "MountPoints": [
       {
        "ContainerPath": "/mnt/efs/fs1",
        "ReadOnly": false,
        "SourceVolume": "mainEfs"
       }
      ],
      "Name": "web",
      "PortMappings": [
       {
        "ContainerPort": 80,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "CheshireCatCatEcsClusterCatFargateServiceTaskDefExecutionRoleD6A5376D",
      "Arn"
     ]
    },
    "Family": "customcatimageCheshireCatCatEcsClusterCatFargateServiceTaskDefE719AADF",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "RuntimePlatform": {
     "CpuArchitecture": "ARM64",
     "OperatingSystemFamily": "LINUX"
    },
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "CheshireCatCatEcsClusterCatFargateServiceTaskDefTaskRoleF9924A1C",
      "Arn"
     ]
    },
    "Volumes": [
     {
      "EFSVolumeConfiguration": {
       "FilesystemId": {
        "Ref": "CheshireCatMainEfs1F8A2E55"
       }
      },
      "Name": "mainEfs"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/CatEcsCluster/CatFargateService/TaskDef/Resource"
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceTaskDefwebLogGroupBC7A147D": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/CatEcsCluster/CatFargateService/TaskDef/web/LogGroup/Resource"
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceTaskDefExecutionRoleD6A5376D": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/CatEcsCluster/CatFargateService/TaskDef/ExecutionRole/Resource"
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceTaskDefExecutionRoleDefaultPolicy2F39DA7E": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:BatchGetImage",
        "ecr:GetDownloadUrlForLayer"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ecr:",
          {
           "Ref": "AWS::Region"
          },
          ":",
          {
           "Ref": "AWS::AccountId"
          },
          ":repository/",
          {
           "Fn::Sub": "cdk-hnb659fds-container-assets-${AWS::AccountId}-${AWS::Region}"
          }
         ]
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "CheshireCatCatEcsClusterCatFargateServiceTaskDefwebLogGroupBC7A147D",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "CheshireCatCatEcsClusterCatFargateServiceTaskDefExecutionRoleDefaultPolicy2F39DA7E",
    "Roles": [
     {
      "Ref": "CheshireCatCatEcsClusterCatFargateServiceTaskDefExecutionRoleD6A5376D"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/CatEcsCluster/CatFargateService/TaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceA78EE7A4": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "CheshireCatCatEcsClusterCatCluster38B41D90"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "web",
      "ContainerPort": 80,
      "TargetGroupArn": {
       "Ref": "CheshireCatCatEcsClusterCatFargateServiceLBPublicListenerECSGroup1614C109"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "CheshireCatCatEcsClusterCatFargateServiceSecurityGroup29A2B458",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "CheshireCatVpcPrivateSubnet1SubnetB06680A7"
       },
       {
        "Ref": "CheshireCatVpcPrivateSubnet2Subnet708984CF"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "CheshireCatCatEcsClusterCatFargateServiceTaskDefF999623A"
    }
   },
   "DependsOn": [
    "CheshireCatCatEcsClusterCatFargateServiceLBPublicListenerECSGroup1614C109",
    "CheshireCatCatEcsClusterCatFargateServiceLBPublicListenerCD3919DE"
   ],
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/CatEcsCluster/CatFargateService/Service/Service"
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceSecurityGroup29A2B458": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "custom-cat-image/CheshireCat/CatEcsCluster/CatFargateService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "CheshireCatVpcB671BC86"
    }
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/CatEcsCluster/CatFargateService/Service/SecurityGroup/Resource"
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceSecurityGroupfromcustomcatimageCheshireCatCatEcsClusterCatFargateServiceLBSecurityGroupC03181E180A8463C2A": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "CheshireCatCatEcsClusterCatFargateServiceSecurityGroup29A2B458",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "CheshireCatCatEcsClusterCatFargateServiceLBSecurityGroup593BC2CC",
      "GroupId"
     ]
    },
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/CatEcsCluster/CatFargateService/Service/SecurityGroup/from customcatimageCheshireCatCatEcsClusterCatFargateServiceLBSecurityGroupC03181E1:80"
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceSecurityGroupfromcustomcatimageCheshireCatMainEfsEfsSecurityGroupE7FD96C72049DE6DDE7F": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "from customcatimageCheshireCatMainEfsEfsSecurityGroupE7FD96C7:2049",
    "FromPort": 2049,
    "GroupId": {
     "Fn::GetAtt": [
      "CheshireCatCatEcsClusterCatFargateServiceSecurityGroup29A2B458",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "CheshireCatMainEfsEfsSecurityGroup8D7C078C",
      "GroupId"
     ]
    },
    "ToPort": 2049
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CheshireCat/CatEcsCluster/CatFargateService/Service/SecurityGroup/from customcatimageCheshireCatMainEfsEfsSecurityGroupE7FD96C7:2049"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31Ty27jMAz8lr0r2jaHvafpAwG6XcMueg1omfGykSVDpBIEhv99ITmvPrAnDodDiRpJc/3rVt/8gD3PTLOdWar1UAmYrYI9rwc0cz289UYtN+6tWKoi1pZMFWuHkrgLKn0UfIXa4oW/cAtmbwiEvDuLE3hYFSm8gDyB4B4Oqgi0A8HLwisnGByeBdMkx2whAuZvh05UhSYGksNT8LHPM/yXWLk2IPMX/iHTo8IN6+GRLFYHFuyS7mP220cnrxBalFGhYT0sbWTBkIon+AihheQBb+9xQ45ODnxmvBMgh+GKO/ZWGHZkJlcnmLdb9yDJGNaLvrdksrfPHpo7sOAMNp/a0QILGeuhqbOCXLub6+H77nyID/m1jljQHTUnfFWfTDnbfpWOiqDTQ+mnV5Jj4S2ZfK0TGpX1Levh2bfnJU44nTysgRmF9b03WwyrDtr0vFBSTZfYe [...]
   },
   "Metadata": {
    "aws:cdk:path": "custom-cat-image/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Outputs": {
  "CheshireCatQdrantEcsClusterQdrantFargateServiceLoadBalancerDNSFB53C5D8": {
   "Value": {
    "Fn::GetAtt": [
     "CheshireCatQdrantEcsClusterQdrantFargateServiceLB8BDD7984",
     "DNSName"
    ]
   }
  },
  "CheshireCatQdrantEcsClusterQdrantFargateServiceServiceURL09781C2D": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "CheshireCatQdrantEcsClusterQdrantFargateServiceLB8BDD7984",
        "DNSName"
       ]
      }
     ]
    ]
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceLoadBalancerDNSA69A9D53": {
   "Value": {
    "Fn::GetAtt": [
     "CheshireCatCatEcsClusterCatFargateServiceLBD31F79A7",
     "DNSName"
    ]
   }
  },
  "CheshireCatCatEcsClusterCatFargateServiceServiceURLD6C4ED80": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "CheshireCatCatEcsClusterCatFargateServiceLBD31F79A7",
        "DNSName"
       ]
      }
     ]
    ]
   }
  },
  "CatHost": {
   "Value": {
    "Fn::GetAtt": [
     "CheshireCatCatEcsClusterCatFargateServiceLBD31F79A7",
     "DNSName"
    ]
   }
  },
  "QdrantHost": {
   "Value": {
    "Fn::GetAtt": [
     "CheshireCatQdrantEcsClusterQdrantFargateServiceLB8BDD7984",
     "DNSName"
    ]
   }
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
